cmake_minimum_required(VERSION 3.21)
project(HackerRank_C__)

set(CMAKE_CXX_STANDARD 11)

add_executable(HackerRank_C__ main.cpp)

add_executable(cpp-hello-world cpp-hello-world/Solution.cpp)

add_executable(cpp-input-and-output cpp-input-and-output/Solution.cpp)

add_executable(c-tutorial-basic-data-types c-tutorial-basic-data-types/Solution.cpp)

add_executable(c-tutorial-conditional-if-else c-tutorial-conditional-if-else/Solution.cpp)
